# eye

./: .gitmodules  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
config/: motion.conf
proto/: messages.proto
src/: camera.rs  client.rs  fs.rs  main.rs  networking.rs  server.rs  servo.rs  test.rs
src/camera/: fake_camera.rs  motion_camera.rs
src/servo/: pca_servo.rs  test_servo.rs
