[package]
name = "eye"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "*"
pnet = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"]}
prost = "0.10"
bytes = "1.1.0"

[build-dependencies]
prost-build = { version = "0.10" }

[features]
camera = []

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/test.rs"
