[package]
name = "eye"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "*"
pnet = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"]}
prost = "0.10"
bytes = "1.1.0"
xdg = "2.4.1"

[build-dependencies]
prost-build = { version = "0.10" }
cc = "1.0"
bindgen = "0.60"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
